--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "CanineDimSpool",
+  "name": "hacktoberapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js",
+	"start": "node index.js"
   },
   "keywords": [],
   "author": "",
